Version 1.3.0 (WIP)
------------------------------------------------------------------------------

NEW FEATURES
*random_page allows for the retrieval of a randomly-selected page's content

DEVELOPMENT
*Doc tweaks and some simplification of argument parsing around page_content and random_page
*query() marked as exportable to allow simple third-party plugins into WikipediR

Version 1.2.0
------------------------------------------------------------------------------

NEW FEATURES
*1.2.0 features vast syntax changes and a large number of new functions. Please check the vignette.

DEVELOPMENT
*Massive internal refactoring

Version 1.0.1
------------------------------------------------------------------------------
* Roxygenised documentation, some R CHECK errors fixed.
* Test suite added for error handlers.

Version 1.0.0
------------------------------------------------------------------------------
* First release version
* Introduction of wiki_usercontribs, which retrieves recent contributions for a specified username
* Bugfixes to error handling routines
* Bugfix to problems around wiki_con, where species or commons users were unable to take advantage of CurlOpts.

Version 0.7.0
------------------------------------------------------------------------------

* wiki_page now returns the DOM of the relevant page, not the wikimarkup, in line with a suggestion from Scott Chamberlain. This should be parsable by the HTML tree parser in the XML package.

Version 0.6.3
------------------------------------------------------------------------------

* Standardisation and cleanup of error handlers, and the introduction of a single central LimitHandler.

Version 0.6.2
------------------------------------------------------------------------------

* Bug fix from Scott Chamberlain around wiki_page, switching the content type over to x-wikitext.
* Introduction of w_timeout as a field in the connector object; will be extended to other CURL options in time.

Version 0.6.1