@@ -1,11 +1,11 @@
 context("Content retrieval")
 
 test_that("Wikitext content can be retrieved through page_content", {
-  expect_true({page_content("en","wikipedia", page = "Barack Obama", as_wikitext=TRUE);TRUE})
+  expect_true({page_content("en","wikipedia", page_name = "Barack Obama", as_wikitext=TRUE);TRUE})
 })
 
 test_that("HTML content can be retrieved through page_content", {
-  expect_true({page_content("en","wikipedia", page = "Barack Obama", as_wikitext=FALSE);TRUE})
+  expect_true({page_content("en","wikipedia", page_name = "Barack Obama", as_wikitext=FALSE);TRUE})
 })
 
 test_that("HTML content can be retrieved through revision_content", {
